argo/apps/media/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`index.smeyer.ca`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
  tls:
    certResolver: letsencrypt
